[Vin] - Fixed carousel buttons broken on zoom

--- a/core/static/css/v2/pages/home/home-page.less
+++ b/core/static/css/v2/pages/home/home-page.less
@@ -125,11 +125,12 @@
     .carousel-buttons-wrapper {
       position: relative;
       max-width: 380px;
+      text-align: center;
 
       .carousel-control-container {
         border: 1px solid @lighter-grey;
         height: 38px;
-        width: 90px;
+        display: inline-block;
         margin: auto;
 
         .carousel-control {
